Changed my about description

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@ layout: default
 
     <div class="container">
         <section>
-            <p>Meu nome é <strong>Leonardo Rifeli</strong>, tenho 20 anos e resido em <strong>Joinville (SC)</strong>. Atuo há cerca de três anos no mercado Web, desde então venho adquirindo e aprimorando minhas experiências. Atuo como <strong>desenvolvedor back-end</strong> na agência <a href="http://taginterativa.com.br/" target="_blank">taginterativa.com.br</a>. Estou cursando bacharelado em Engenharia de Computação. Contribuo para projetos open source e para a comunidade web como um todo.</p>
+            <p>Meu nome é <strong>Leonardo Rifeli</strong>, tenho 20 anos e resido em <strong>Joinville (SC)</strong>. Estou há cerca de três anos no mercado Web, desde então venho adquirindo e aprimorando minhas experiências. Atualmente sou <strong>desenvolvedor back-end</strong> na agência (da vaga :D) <a href="http://taginterativa.com.br/" target="_blank">taginterativa.com.br</a>. Estou cursando bacharelado em Engenharia de Computação. Contribuo para projetos open source e para a comunidade web como um todo.</p>
 
             <p>Sou comunicativo, organizado e responsável. Meu foco é o trabalho em equipe, com empenho e entusiasmo para solucionar problemas da maneira mais viável.</p>
 
@@ -36,11 +36,7 @@ layout: default
                 <li>GIT;</li>
                 <li>AngularJS;</li>
                 <li>NodeJS;</li>
-                <li>GruntJS;</li>
                 <li>HTML;</li>
-                <li>Responsive Design;</li>
-                <li>CSS (Compass, Sass, Less);</li>
-                <li>CSS Frameworks (Bootstrap, Foundation, Skeleton);</li>
                 <li>Scrum;</li>
                 <li>And more Skills;</li>
                 <li>What i do not know, i easily learn fast.</li>
