Sended a new post

--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@ layout: default
 
     <div class="container">
         <section>
-            <p>Meu nome é <strong>Leonardo Rifeli</strong>, tenho 20 anos e resido em <strong>Joinville (SC)</strong>. Estou há cerca de três anos no mercado Web, desde então venho adquirindo e aprimorando minhas experiências. Atualmente sou <strong>desenvolvedor back-end</strong> na agência (da vaga :D) <a href="http://taginterativa.com.br/" target="_blank">taginterativa.com.br</a>. Estou cursando bacharelado em Engenharia de Computação. Contribuo para projetos open source e para a comunidade web como um todo.</p>
+            <p>Meu nome é <strong>Leonardo Rifeli</strong>, tenho 20 anos e resido em <strong>Joinville (SC)</strong>. Estou há aproximadamente quatro anos no mercado Web, desde então venho adquirindo e aprimorando minhas experiências e meus conhecimentos. Atualmente sou <strong>desenvolvedor back-end</strong> na agência (da vaga :D) <a href="http://taginterativa.com.br/" target="_blank">taginterativa.com.br</a>. Estou cursando bacharelado em Engenharia de Computação na UNISOCIESC, no campus marques de olinda. Contribuo para projetos open source e para toda a comunidade web.</p>
 
-            <p>Sou comunicativo, organizado e responsável. Meu foco é o trabalho em equipe, com empenho e entusiasmo para solucionar problemas da maneira mais viável.</p>
+            <p>Sou comunicativo, desafiador, organizado e responsável. Meu foco é o trabalho em equipe, com empenho e entusiasmo para solucionar problemas complexos e/ou simples, da maneira mais viável.</p>
 
             <p>Busco novos conhecimentos e desafios para estar em constante evolução. Desde muito novo sou apaixonado por tecnologia, me adequo há mudanças, sempre procuro aprimorar e transmitir meus conhecimentos.</p>
         </section>
@@ -31,12 +31,13 @@ layout: default
                 <li>Amazon AWS;</li>
                 <li>PHP;</li>
                 <li>C;</li>
+                <li>C++;</li>
                 <li>API REST;</li>
                 <li>MySQL - MongoDB;</li>
                 <li>GIT;</li>
-                <li>AngularJS;</li>
                 <li>NodeJS;</li>
                 <li>HTML;</li>
+                <li>CSS;</li>
                 <li>Scrum;</li>
                 <li>And more Skills;</li>
                 <li>What i do not know, i easily learn fast.</li>
