Changed my about

--- a/about.html
+++ b/about.html
@@ -11,11 +11,12 @@ layout: default
 
     <div class="container">
         <section>
-            <p>Meu nome é <strong>Leonardo Rifeli</strong>, tenho 20 anos e resido em <strong>Joinville (SC)</strong>. Estou há aproximadamente quatro anos no mercado Web, desde então venho adquirindo e aprimorando minhas experiências e meus conhecimentos. Atualmente sou <strong>desenvolvedor back-end</strong> na agência (da vaga :D) <a href="http://taginterativa.com.br/" target="_blank">taginterativa.com.br</a>. Estou cursando bacharelado em Engenharia de Computação na UNISOCIESC, no campus marques de olinda. Contribuo para projetos open source e para toda a comunidade web.</p>
 
-            <p>Sou comunicativo, desafiador, organizado e responsável. Meu foco é o trabalho em equipe, com empenho e entusiasmo para solucionar problemas complexos e/ou simples, da maneira mais viável.</p>
+            <p>My name is <strong>Leonardo Rifeli</strong>, I'm 20 and I live in Joinville (SC). I'm about three years in the Web market has since come acquiring and honing my experiences. I am currently a <strong>back-end developer</strong> at the agency <a href="http://taginterativa.com.br/" target="_blank">taginterativa.com.br</a>. I'm studying a BA in Computer Engineering. Contribute to open source projects and the web community as a whole.</p>
 
-            <p>Busco novos conhecimentos e desafios para estar em constante evolução. Desde muito novo sou apaixonado por tecnologia, me adequo há mudanças, sempre procuro aprimorar e transmitir meus conhecimentos.</p>
+            <p>I'm communicative, organized and responsible. My focus is teamwork with commitment and enthusiasm to solve problems in the most viable way.</p>
+
+            <p>Seek new knowledge and challenges to be constantly evolving. Since very young I am passionate about technology, I suit there are changes, I always try to improve and pass on my knowledge.</p>
         </section>
 
         <hr class="major" />
