Fixed my about description

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ layout: default
     <div class="container">
         <section>
 
-            <p>My name is <strong>Leonardo Rifeli</strong>, I'm 20 and I live in Joinville (SC). I'm about three years in the Web market has since come acquiring and honing my experiences. I am currently a <strong>back-end developer</strong> at the agency <a href="http://taginterativa.com.br/" target="_blank">taginterativa.com.br</a>. I'm studying a BA in Computer Engineering. Contribute to open source projects and the web community as a whole.</p>
+            <p>My name is <strong>Leonardo Rifeli</strong>, I'm 20 and I live in Joinville (SC). I'm about three years in the Web market has since come acquiring and honing my experiences. I am currently a <strong>back-end developer</strong> at the **ContaAzul** <a href="http://contaazul.com/" target="_blank">taginterativa.com.br</a>. I'm studying a BA in Computer Engineering. Contribute to open source projects and the web community as a whole.</p>
 
             <p>I'm communicative, organized and responsible. My focus is teamwork with commitment and enthusiasm to solve problems in the most viable way.</p>
 
@@ -27,6 +27,7 @@ layout: default
             <div style="clear: both"></div>
 
             <ul>
+                <li>Java;</li>
                 <li>Linux/OS X;</li>
                 <li>Admin Server Linux;</li>
                 <li>Amazon AWS;</li>
@@ -35,8 +36,9 @@ layout: default
                 <li>C++;</li>
                 <li>API REST;</li>
                 <li>MySQL - MongoDB;</li>
+                <li>Clean code and SOLID;</li>
+                <li>Design Patterns;</li>
                 <li>GIT;</li>
-                <li>NodeJS;</li>
                 <li>HTML;</li>
                 <li>CSS;</li>
                 <li>Scrum;</li>
