--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ layout: default
     <div class="container">
         <section>
 
-            <p>My name is <strong>Leonardo Rifeli</strong>, I'm 20 and I live in Joinville (SC). I'm about three years in the Web market has since come acquiring and honing my experiences. I am currently a <strong>back-end developer</strong> at the **ContaAzul** <a href="http://contaazul.com/" target="_blank">contaazul.com</a>. I'm studying a BA in Computer Engineering. Contribute to open source projects and the web community as a whole.</p>
+            <p>My name is <strong>Leonardo Rifeli</strong>, I'm 20 and I live in Joinville (SC). I'm about three years in the Web market has since come acquiring and honing my experiences. I am currently a <strong>software engineer developer</strong> at the <strong>ContaAzul</strong> <a href="http://contaazul.com/" target="_blank">contaazul.com</a>. I'm studying a BA in Computer Engineering. Contribute to open source projects and the web community as a whole.</p>
 
             <p>I'm communicative, organized and responsible. My focus is teamwork with commitment and enthusiasm to solve problems in the most viable way.</p>
 
