Fixed about skill

--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@ layout: default
                 <li>Admin Server Linux;</li>
                 <li>Amazon AWS;</li>
                 <li>PHP;</li>
+                <li>Job Queues</li>
                 <li>C;</li>
                 <li>C++;</li>
                 <li>API REST;</li>
