--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@ layout: default
                 <li>MySQL - MongoDB;</li>
                 <li>Clean code and SOLID;</li>
                 <li>Design Patterns;</li>
+                <li>Online Conversion;</li>
                 <li>GIT;</li>
                 <li>HTML;</li>
                 <li>CSS;</li>
