Fixed my skills

--- a/about.html
+++ b/about.html
@@ -30,11 +30,12 @@ layout: default
             <ul>
                 <li>Java;</li>
                 <li>Linux/OS X;</li>
+                <li>NodeJS</li>
                 <li>Amazon AWS;</li>
                 <li>PHP;</li>
                 <li>Job Queues</li>
                 <li>API REST;</li>
-                <li>MySQL - MongoDB;</li>
+                <li>MySQL - Postgres - MongoDB;</li>
                 <li>Clean code and SOLID;</li>
                 <li>Design Patterns;</li>
                 <li>Online Conversion;</li>
