--- a/about.html
+++ b/about.html
@@ -30,10 +30,9 @@ layout: default
             <ul>
                 <li>Java;</li>
                 <li>Linux/OS X;</li>
-                <li>NodeJS</li>
+                <li>NodeJS;</li>
                 <li>Amazon AWS;</li>
                 <li>PHP;</li>
-                <li>Job Queues</li>
                 <li>API REST;</li>
                 <li>MySQL - Postgres - MongoDB;</li>
                 <li>Clean code and SOLID;</li>
